# eincraft

./: .gitlab-ci.yml  README.md  pyproject.toml
eincraft/: __init__.py  contraction.py  core.py  index.py  tensor.py
src/eincraft/: __init__.py  symbol.py  tensor.py  term.py  utils.py
tests/: conftest.py  test_arithmetic.py  test_basic.py  test_contractions.py  test_diagonal.py  test_eincraft.py  test_simplification.py  test_substitution.py
