[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eincraft"
version = "0.2.0"
description = "A library to simplify and automate einsum operations in a more intuitive way."
readme = "README.md"
authors = [
    { name = "Andrea Bianchi", email = "andrea_bianchi@outlook.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
opt_einsum = [
    "opt_einsum",
]

[project.urls]
Homepage = "https://gitlab.com/andrea_bianchi/eincraft"

[tool.setuptools.packages.find]
where = ["src"]
